--- a/indexget.html
+++ b/indexget.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1> Cadastro </h1>
-        <form action="/recebe.html" method="get">
+        <form action="/recebeget.html" method="get">
             Nome Completo: <input type="text" id="nome" name="nome">
             <br><br>
             Senha: <input type="password" id="senha" name="senha">
