--- a/recebeget.html
+++ b/recebeget.html
@@ -3,6 +3,8 @@
         <title> Aula 06 </title>
     </head>
     <body>
-        <p> Dados Recebidos: </p>
+        <p>
+            Dados Recebidos: 
+        </p>
     </body>
 </html>
