--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,4 @@
-<head>
+<html>
   <head>
     <title> Aula 06 </title>
   </head>
@@ -18,4 +18,4 @@
         <input type="button" value="Entrar">
     </form>
   </body>
-</head>
+</html>
