--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1> Cadastro </h1>
-    <form action="/recebepost.html" method="post">
+    <form action="/recebe.html" method="post">
         Nome Completo: <input type="text" id="nome" name="nome">
         <br><br>
         Senha: <input type="password" id="senha" name="senha">
